checker/tests/parsing/errors/struct_missing_comma.mft
type T {
  f: Base { a b };
}
=== error ===
Unrecognized token `b` found at 23:24
Expected one of ",", ":", "@" or "}"